# oreo_description

./: CMakeLists.txt  Readme.md  package.xml
config/: joint_names_oreo_description.yaml  oreo_motor_controllers.yaml
include/oreo_description/: omni_control.h
launch/: navigation.launch  navigation_loam.launch  oreo.launch  oreo_kinova.launch  oreo_vanilla.launch
media/materials/scripts/: oreo_base.material  oreo_body.material  oreo_wheel.material
meshes/: oreo_base.dae  oreo_body.dae  oreo_wheel.dae
rviz/: oreo.rviz
scripts/: delay_velodyne.py  move_arm.py  range2point.py
src/: omni_contorl.cpp
urdf/: oreo_description.urdf.xacro  oreo_kinova_description.urdf.xacro
urdf/base/: oreo_base.gazebo.xacro  oreo_base.urdf.xacro
urdf/body/: oreo_body.gazebo.xacro  oreo_body.urdf.xacro
urdf/omni_wheel/: omni_wheel.gazebo.xacro  omni_wheel_complex.xacro  roller.xacro
urdf/sensor/camera/: _d435.gazebo.xacro  _d435.urdf.xacro
urdf/sensor/imu/: imu.urdf.xacro
urdf/sensor/laser/: sick_lms1xx.urdf.xacro
world/: world.world
