<package format="2">
  <name>oreo_description</name>
  <version>2.2.1</version>
  <description>
    <p>URDF Description package for OREO</p>
    <p>This package contains configuration data, 3D models and launch files
for OREO robot</p>
  </description>
  <author>BrianTu</author>
  <maintainer email="brianakartu@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msg</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>urdf</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
